feat(euclid): add endpoint to deactivate static routing rule (#228)
